Add subscription token verification

--- a/.env.sample
+++ b/.env.sample
@@ -5,9 +5,11 @@ WEIBO_KEY=weibo_key
 WEIBO_SECRET=weibo_secret
 WEIBO_ACCESS_TOKEN=weibo_access_token
 
-DOMAIN=instahust.herokuapp.com
-TAG=instahust
-
 GMAIL_USERNAME=example@gmail.com
 GMAIL_PASSWORD=foobar
 EXCEPTION_RECIPIENT=recipient@example.com
+
+DOMAIN=instahust.herokuapp.com
+TAG=instahust
+HUB_TOKEN=whatever
+
