Add sentry for exception tracking

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,8 @@ CLIENT_ID=instagram_client_id
 
 WEIBO_ACCESS_TOKEN=weibo_access_token
 
+SENTRY_DSN=your_sentry_dsn
+
 GMAIL_USERNAME=example@gmail.com
 GMAIL_PASSWORD=foobar
 EXCEPTION_RECIPIENT=recipient@example.com
